fix gap-row in body grid and add --row-gap-container-grid variable but not work for the moment

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 
     body {
         /* display: flex; */
+        row-gap: 0;
         flex-direction: column;
         background: url('1230968-ciel-etoile-gratuit-photo.jpeg');
         background: url('7210104-galaxy-stars-in-the-univers-hors-terre-abstract-graphic-design-wallpaper-card-3d-gratuit-photo.jpg');
